--- a/mail/dovecot/conf.d/10-master.conf
+++ b/mail/dovecot/conf.d/10-master.conf
@@ -16,7 +16,7 @@
 
 service imap-login {
   inet_listener imap {
-    #port = 143
+    port = 0
   }
   inet_listener imaps {
     #port = 993
@@ -37,7 +37,7 @@ service imap-login {
 
 service pop3-login {
   inet_listener pop3 {
-    #port = 110
+    port = 0
   }
   inet_listener pop3s {
     #port = 995
@@ -46,8 +46,10 @@ service pop3-login {
 }
 
 service lmtp {
-  unix_listener lmtp {
-    #mode = 0666
+  unix_listener /var/spool/postfix/private/dovecot-lmtp {
+    mode = 0666
+    group = postfix
+    user = postfix
   }
 
   # Create inet listener only if you can't use the above UNIX socket
@@ -56,6 +58,7 @@ service lmtp {
     #address =
     #port = 
   #}
+  user = mail
 }
 
 service imap {
@@ -87,25 +90,27 @@ service auth {
   # something else than 0666 and Dovecot lets the kernel enforce the
   # permissions (e.g. 0777 allows everyone full permissions).
   unix_listener auth-userdb {
-    #mode = 0666
-    #user = 
+    mode = 0600
+    user = mail
     #group = 
   }
 
   # Postfix smtp-auth
-  #unix_listener /var/spool/postfix/private/auth {
-  #  mode = 0666
-  #}
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0666
+    user = postfix
+    group = postfix
+  }
 
   # Auth process is run as this user.
-  #user = $default_internal_user
+  user = dovecot
 }
 
 service auth-worker {
   # Auth worker process is run as root by default, so that it can access
   # /etc/shadow. If this isn't necessary, the user should be changed to
   # $default_internal_user.
-  #user = root
+  user = mail
 }
 
 service dict {
