--- a/mail/dovecot/dovecot.conf
+++ b/mail/dovecot/dovecot.conf
@@ -96,3 +96,5 @@ dict {
 # A config file can also tried to be included without giving an error if
 # it's not found:
 !include_try local.conf
+
+protocols = imap lmtp
